crates/rtb-error/tests/trybuild/non_exhaustive.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/trybuild/non_exhaustive.rs:12:11
   |
12 |     match err {
   |           ^^^ pattern `_` not covered
   |
note: `rtb_error::Error` defined here
  --> src/lib.rs
   |
   | pub enum Error {
   | ^^^^^^^^^^^^^^
   = note: the matched value is of type `rtb_error::Error`
   = note: `rtb_error::Error` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
17 ~         Error::Other(_) => "other",
18 ~         _ => todo!(),
   |
